<resources>
    <string name="app_name">Monday Morning</string>
    <string name="usrnme">username</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="display_name">display name</string>
    <string name="email">email</string>
    <string name="action_search">Search</string>
    <string name="news">All News</string>
    <string name="featured">Featured</string>
    <string name="buzz">Buzz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article_image">article image</string>
    <string name="an_image">an image</string>
    <string-array name="titleText">
        <item>Title Goes Here</item>
        <item>Title Goes Here</item>
        <item>Title Goes Here</item>
        <item>Title Goes Here</item>
        <item>Title Goes Here</item>
        <item>Title Goes Here</item>
        <item>Title Goes Here</item>
        <item>Title Goes Here</item>
        <item>Title Goes Here</item>
        <item>Title Goes Here</item>
        <item>Title Goes Here</item>
        <item>Title Goes Here</item>
        <item>Title Goes Here</item>
    </string-array>

    <string-array name="byLine">
        <item>By Line</item>
        <item>By Line</item>
        <item>By Line</item>
        <item>By Line</item>
        <item>By Line</item>
        <item>By Line</item>
        <item>By Line</item>
        <item>By Line</item>
        <item>By Line</item>
        <item>By Line</item>
        <item>By Line</item>
        <item>By Line</item>
        <item>By Line</item>
    </string-array>

    <string-array name="dateLine">
        <item>MM DD, YYYY</item>
        <item>MM DD, YYYY</item>
        <item>MM DD, YYYY</item>
        <item>MM DD, YYYY</item>
        <item>MM DD, YYYY</item>
        <item>MM DD, YYYY</item>
        <item>MM DD, YYYY</item>
        <item>MM DD, YYYY</item>
        <item>MM DD, YYYY</item>
        <item>MM DD, YYYY</item>
        <item>MM DD, YYYY</item>
        <item>MM DD, YYYY</item>
        <item>MM DD, YYYY</item>
    </string-array>

    <string-array name="Tag">
        <item>TAG</item>
        <item>TAG</item>
        <item>TAG</item>
        <item>TAG</item>
        <item>TAG</item>
        <item>TAG</item>
        <item>TAG</item>
        <item>TAG</item>
        <item>TAG</item>
        <item>TAG</item>
        <item>TAG</item>
        <item>TAG</item>
        <item>TAG</item>
    </string-array>
</resources>
